<resources>
    <string name="app_name">A4 Notes - j349hu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_archived">Show Archived?</string>
    <string name="important">Important</string>
    <string name="archived">Archived</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="create">CREATE</string>
</resources>