<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent" tools:ignore="ExtraText">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Switch android:id="@+id/importantSwitchA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                android:layout_margin="12dp"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"/>

        <EditText android:id="@+id/titleA"
                  android:inputType="text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint = "@string/title"/>

        <EditText android:id="@+id/ContentA"
                  android:inputType="text"
                  android:layout_width="match_parent"
                  android:layout_height="fill_parent"
                  android:hint = "@string/content"
                  android:gravity="top|left"/>

    </LinearLayout>

    <Button android:id="@+id/createButtonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/create"/>

</FrameLayout>